highlight review on hover

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   font-size: large;
 }
 
+.DisplayReviewForSingleRec div:hover{
+  background-color: green
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
