--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
+    z-index: 2  
 }
 
 /* Links inside the navbar */
@@ -108,6 +109,24 @@
   border-top-right-radius: 0;
 }
 
+img {
+  /* display: inline-block; */
+  float: left;
+  max-height: 50%;
+  max-width: 50%;
+  padding: 1.2%;
+}
+
+.wrapper-relatives {
+  max-width: 92%;
+  width: 900px;
+  margin: 10px auto 40px;
+  padding: 20px 20px 0;
+  background-color: #ddd;
+  font-family: Roboto;
+  position: relative;
+  overflow: hidden;
+}
 
 
 @keyframes App-logo-spin {
