--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,10 @@
   overflow: hidden;
 }
 
+/* for recruiter.review  more and less buttons*/
+.btn-review {
+  margin-bottom: 5px;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
