display rating in font-awesome stars

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,10 @@
   margin-bottom: 5px;
 }
 
+
+.fa-star {
+  color: white;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
