--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
 }
-
+/*
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -20,11 +20,11 @@
 
 .App-intro {
   font-size: large;
-}
+} */
 
-.DisplayReviewForSingleRec div:hover{
+/* .DisplayReviewForSingleRec div:hover{
   background-color: green
-}
+} */
 
 /* The navigation bar */
 .navbar {
