handle submit button press for search

--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,14 @@
     text-decoration: none;
 }
 
-.navbar input{
+.navbar input, .navbar button{
     float: left;
     display: block;
     /* color: #f2f2f2; */
     text-align: center;
     /* padding: 14px 16px; */
     margin-top: 14px;
+    margin-right: 2px;
     text-decoration: none;
 }
 
